--- a/templates/dafeiji.html
+++ b/templates/dafeiji.html
@@ -346,7 +346,7 @@ function addroom(rooo){
 	var appendroom='<div class="product-item bg-light">';
 	appendroom+='<div class="card">';
 	appendroom+='<div class="thumb-content">';
-	appendroom+='<a href="'+'feiji';
+	appendroom+='<a href="'+'feiji?user_id={{user_id}}';
 	appendroom+='"><img class="card-img-top img-fluid" src="templates/images/products/products-5.jpg" alt="Card image cap">';
 	appendroom+='</a></div>';
 	appendroom+='<div class="card-body">';
