--- a/templates/feiji.html
+++ b/templates/feiji.html
@@ -66,10 +66,9 @@
       function addscore(scorelist){
         var vcurrent = document.getElementById("fenshu");
         var appendroom='<table border="1">';
-        console.log(scorelist.length);
+        appendroom+='<tr><td>排名</td><td>分数</td></tr>'
         for(var i=0;i<scorelist.length;i++){
-          alert(scorelist[i]);
-          appendroom+='<tr><td>'+scorelist[i][1]+'</td><td>'+scorelist[i][0]+'</td></tr>';
+          appendroom+='<tr><td>'+scorelist[i]["username"]+'</td><td>'+scorelist[i]['score']+'</td></tr>';
           //alert(scorelist[i][1]);
           //alert(scorelist[i][0]);
         }
@@ -78,14 +77,14 @@
       }
       function freshscore(){
         var rr;
-        /*$.ajax({
-          type:"POST",
-          url:"score",
+        $.ajax({
+          type:"GET",
+          url:"http://10.77.70.135:9051/v1/user/score",
           async: true,
           success:function(result){
             addscore(result["data"]);
           }
-        });*/
+        });
       }
       window.onload =freshscore();
 
@@ -335,10 +334,9 @@
       function gameover() {
         clearInterval(stop);
         var res = window.confirm("得分为: " + score.num + "\n继续游戏请按确定");
-        /*
         $.ajax({
           type:"POST",
-          //url:"jifen",
+          url:"http://10.77.70.135:9051/v1/user/score",
           dataType:"json",
           async: true,
           data:{"user_id":"{{user_id}}","score":score.num},
@@ -346,7 +344,7 @@
             console.log("成功");
             freshscore();
           }
-        });*/
+        });
         if (res) {
           init();
           stop = setInterval("run()",1000/100);
